--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js"
   },
   "author": "Ahmed Sallam",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
