--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mongoose": "^5.4.9",
     "pug": "^2.0.3",
     "uniqid": "^5.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0"
   }
 }
